Horizontal spacing fixed

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,5 @@
 body {
-    padding: 30px;
+    padding: 30px 0;
     font: 14px "Montserrat", Helvetica, Arial, sans-serif;
 }
 
